--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "vite": "^4.2.0"
   },
   "dependencies": {
-    "@steeze-ui/svelte-icon": "^1.3.2",
     "class-variance-authority": "^0.5.1",
-    "iconify-icon": "^1.0.7"
+    "svelte-forms": "^2.3.1",
+    "svelte-spa-router": "^3.3.0"
   }
 }
