--- a/package.json
+++ b/package.json
@@ -1,31 +1,40 @@
 {
-  "name": "spellchecker",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.0.3",
-    "@tsconfig/svelte": "^3.0.0",
-    "@types/node": "^18.15.11",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "postcss-nested": "^6.0.1",
-    "svelte": "^3.55.1",
-    "svelte-check": "^2.10.3",
-    "tailwindcss": "^3.3.1",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
-  },
-  "dependencies": {
-    "class-variance-authority": "^0.5.1",
-    "svelte-forms": "^2.3.1",
-    "svelte-spa-router": "^3.3.0"
-  }
+	"name": "spellchecker",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"devDependencies": {
+		"@sveltejs/vite-plugin-svelte": "^2.0.3",
+		"@tsconfig/svelte": "^3.0.0",
+		"@types/node": "^18.15.11",
+		"@typescript-eslint/eslint-plugin": "^5.59.5",
+		"@typescript-eslint/parser": "^5.59.5",
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.40.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.21",
+		"postcss-nested": "^6.0.1",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.0",
+		"svelte": "^3.55.1",
+		"svelte-check": "^2.10.3",
+		"tailwindcss": "^3.3.1",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.3",
+		"vite": "^4.2.0"
+	},
+	"dependencies": {
+		"class-variance-authority": "^0.5.1",
+		"svelte-forms": "^2.3.1",
+		"svelte-spa-router": "^3.3.0"
+	}
 }
