--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"dependencies": {
 		"class-variance-authority": "^0.5.1",
+		"superstruct": "^1.0.3",
 		"svelte-forms": "^2.3.1",
 		"svelte-spa-router": "^3.3.0"
 	}
