--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.3",
-		"vite": "^4.2.0"
+		"vite": "^4.2.0",
+		"vite-plugin-pwa": "^0.14.7"
 	},
 	"dependencies": {
 		"class-variance-authority": "^0.5.1",
